Update test memory