@@ -65,6 +65,7 @@ dependencies {
 
 test {
     maxHeapSize = '512m'
+    jvmArgs '-XX:MaxPermSize=128m'
 }
 
 pluginBundle {
